<resources>
    <string name="app_name">AndroidCA</string>
    <string name="ISBN">ISBN</string>
    <string name="title">Title</string>
    <string name="authorName">Author Name</string>
    <string name="categoryName">Category Name</string>
    <string name="price">Price</string>
    <string name="discountedPrice">Discounted Price</string>
    <string name="stockLevel">Stock Level</string>
    <string name="synopsis">Synopsis</string>
    <string name="baseURL">http://172.17.249.19/BookStore/Endpoint/IBookService.svc/</string>
    <string name="search">Search Books by Title</string>
    <string name="btn_search_all_txt">All Books</string>
    <string name="btn_search_txt">Search</string>
    <string name="searchActivity_appbar_title">Search for Books</string>
    <string name="ListOfBooksActivity_appbar_title"> Search Results</string>
    <string name="BookDetailActivity_appbar_title">Book Details</string>

</resources>
