<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:shrinkColumns="1">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:id="@+id/bookImage" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ISBN"
                android:id="@+id/textView1" />

            <EditText
                android:editable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText1" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:id="@+id/textView2" />

            <EditText
                android:editable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authorName"
                android:id="@+id/textView3" />

            <EditText
                android:editable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categoryName"
                android:id="@+id/textView4" />

            <EditText
                android:editable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText4" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:id="@+id/textView5" />

            <EditText
                android:editable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText5" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discountedPrice"
                android:id="@+id/textView6" />

            <EditText
                android:editable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText6" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stockLevel"
                android:id="@+id/textView7" />

            <EditText
                android:editable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText7" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/synopsis"
                android:id="@+id/textView8" />

            <EditText
                android:editable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:id="@+id/editText8" />
        </TableRow>


    </TableLayout>
</LinearLayout>